--- a/client/global.css
+++ b/client/global.css
@@ -101,5 +101,6 @@
     font-family: "Cairo", ui-sans-serif, system-ui, -apple-system, Segoe UI,
       Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
     direction: rtl;
+    font-size: 17px;
   }
 }
